2005-07-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c, rbgobj_object.c: Fix a compiling warning. 

2005-07-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/iochannel.rb, timeout.rb: Modified header comments. 

2005-07-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/iochannel.rb: Added. 

2005-07-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* tests/test-iochannel.*: Added tests for GLib::IOChannel. 

2005-06-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c: Rename GLib::IOChannel#fd => #fileno, #to_i. 
	Improved #seek.

2005-06-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c: Added GLib::IOChannel#each_char, #each, #each_line.

2005-06-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c: Rename GLib::IOChannel#read_chars => #read.
	Unify GLib::IOChannel#read_to_end => #read.

2005-06-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c: Rename GLib::IOChannel#read_unichar => #readchar.
	#read_line => #readline. Add #gets, #getc.

2005-06-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_strv.c: Fix double free error. 
	* src/rbglib_iochannel.c: Added GLib::IOChannel.
	* src/rbglib.c, rbgobject.h: ditto.

2005-03-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/spawn.rb: Add a comment. Bugs:1159417.
	* extconf.rb: Add require gtherad-2.0. Bugs: 1159413

2005-03-21  Vincent Isambart <isambart@netcourrier.com>

	* src/lib/pkg-config.rb: Renames the "libs" local variable to "libraries"
	to work ruby-1.9.x.

2005-03-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h, rbgobject.h: Move some macros/definitions to rbgobject.h
	Reported by Vincent Isambart.
	* src/rbglib_maincontext.c: Added GLib::MainContext#query. 

2005-03-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/idle.rb, timeout.rb, timeout2.rb: Added.
	* src/rbglib_pollfd.c: Added GLib::PollFD. 
	* src/rbglib_source.c: Added GLib::Source. 
	* src/rbglib_maincontext.c: Added GLib::MainContext#find_source,